# gwterm

./: .gitignore
wbx/: CMakeLists.txt  entry.cpp  pw.cpp
wbx/exc/: ExchangeFoundation.cpp  ExchangeFoundation.hpp  RootCerts.cpp  RootCerts.hpp  Websocket.cpp  Websocket.hpp  WebsocketImpl.cpp  WebsocketImpl.hpp
wbx/exc/exc_binance/: Binance.cpp  Binance.hpp
wbx/exc/exc_okx/: OKX.cpp  OKX.hpp
